tests/checker/good/lib/TestLib2.scillib
import TestLib1

library TestLib2

let sort_uint32_2 = @list_sort Uint32
