tests/checker/bad/lib/TestLib1.scillib
scilla_version 0

import ListUtils

library TestLib1

let sort_uint32 = @list_sort Uint32
